--- a/client/src/index.css
+++ b/client/src/index.css
@@ -2,3 +2,7 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.input-style-adv {
+  @apply w-full px-4 py-2 text-gray-700 placeholder-gray-400 transition duration-200 border border-indigo-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-indigo-500;
+}
